# ludwig-example

./: .envrc  .gitattributes  .gitignore  Makefile  Pipfile  README.md  pyproject.toml  tmux.yaml
doc/: examples.md
examples/: README.md
examples/01-getting-started/: model-ops.py  predict-model.py  rotten_tomatoes.yaml  rotten_tomatoes_zscore.yaml  train-model.py  viz-model.py
examples/02-higgs-tabnet/: model-ops.py  small_config.yaml  train_higgs_small.py
examples/03-rotten-tomatoes/: model-ops.py  rotten_tomatoes.yaml
examples/04-adult-census/: adult_income.yaml  model-ops.py
python/01_text_classification/: model_definition_file.yaml
