[tool.poetry]
name = "ludwig-example"
version = "0.1.0"
description = ""
authors = ["Gavin Noronha <gavinln@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dask = "^2022.6.0"
ludwig = {version = "0.5.2", extras = ["viz"]}
fire = "^0.4.0"
horovod = "^0.25.0"
s3fs = "^2022.5.0"
ray = "1.12.1"

[tool.poetry.dev-dependencies]
pytest = ">=5.2"
ipython = "^8.4.0"
black = {extras = ["jupyter"], version = "^22.3.0"}
flake8 = "^4.0.1"
mypy = "^0.961"
python-lsp-server = "^1.4.1"
pylsp-mypy = "^0.5.8"
vulture = "^2.4"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
skip-string-normalization = true

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
